--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,294 @@
-.App {
-  text-align: center;
+a { text-decoration: none; color: #a1a0a1; }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:focus { text-decoration: none; }
+a:hover, a:active { text-decoration: none; }
+h1 {
+  color: #585859;
+}
+.k {
+  height: 90px;
+  width: 90px;
+  margin-left: 60px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.header {
+  width: 90vw;
+  height: 120px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+div > span {
+  margin-right: 50px;
+
+}
+
+.current {
+  margin-left: 50px;
+}
+
+.spans {
+  display: flex;
+  font-size: 18px;
+  color: #a1a0a1;
+  cursor: pointer;
+  align-items: center;
+}
+
+i:hover {
+  color: black
+}
+
+.work:hover {
+  color: #4ab5ff
+}
+
+.desc {
+  font-size: 42px;
+  line-height: 77px;
+  font-family: Quicksand;
+  color: gray;
+  font-weight: bolder;
+  margin-top: 100px;
+
+}
+
+.description {
+  width: 70vw;
+  margin-left: 90px;
+}
+
+.container {
+  display: flex;
+  width: 100vw;
+  
+}
+
+.bluetext {
+  color: #4ab5ff
+}
+
+.experience {
+  margin-top: 60px;
+  width: 65vw;
+  margin-left: 38px;
+  /* border: 1px black solid; */
+  font-size: 12px;
+  color: #585859;
+  letter-spacing: 4px;
   display: flex;
   flex-direction: column;
+  margin-left: 50px;
+}
+
+.devmtn {
+  width: 250px;
+  height: auto;
+  margin-top: 10px;
+  margin-left: 60px;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  
+  
+}
+
+.projectcontainer {
+  /* margin-left: 90px; */
+  font-family: Quicksand;
+  letter-spacing: 3px;
+  margin-top: 200px;
+  
+  
+
+}
+
+.personal {
+  height: 50vh;
+  width: 80vw;
+  background: white;
+  margin: 20px;
+  /* box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-content: center;
+  flex-direction: column; 
+  cursor: pointer;
+  
 }
 
-.App-link {
-  color: #61dafb;
+
+.name {
+  margin-left: 90px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.laptop {
+  width: auto;
+  height: 250px;
+  /* margin-bottom: 100px; */
+  
+}
+
+.whitebox {
+  background-color: white;
+  height: 40px;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+}
+
+.contact {
+  
+  height: 5vh;
+  width: 55vh;
+  float: right;
+  
+}
+
+i {
+  margin: 20px;
+}
+
+.icons {
+  float: right;
+  
+}
+
+.skills-container {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 260px;
+}
+
+button {
+  cursor: pointer;
+    width: 120px;
+    margin: 5px;
+    height: 30px;
+    color: white;
+    background: #222;
+    border: solid 1px black;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    font-size: 16px;
+    font-family: Oswald;
+}
+
+button:hover {
+  background: black;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.idk {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+
+}
+
+.info p {
+  /* width: 45vw; */
+  font-family: Roboto;
+}
+
+.sketchful-container {
+  display: flex;
+  justify-content: center;
+  
+ 
+}
+
+.sketchful-body {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    text-align: center;
+    width: 65vw;
+    margin-top: 50px;
+    font-family: Raleway;
+    margin-bottom: 50px;
+}
+
+.sketchful-body span {
+  
+  margin-bottom: 30px;
+  font-size: 16px;
+}
+
+.sketchful-images {
+  width: 40vw;
+  height: auto;
+  margin: 30px;
+  border: 1px black solid;
+  border-radius: 4px;
+  transition:transform 0.25s ease;
+}
+
+.sketchful-images:hover {
+  -webkit-transform:scale(1.2); /* or some other value */
+    transform:scale(1.2);
+}
+
+.img-container {
+  width: 100vw;
+}
+
+
+#about-view {
+  width: 100vw;
+  height: calc(100vh - 50px);
+  display: flex;
+  justify-content: center;
+  font-family: 'Roboto';
+}
+
+#about-content {
+  width: 900px;
+  height: 500px;
+}
+
+#about-title {
+  font-size: 2rem;
+  margin-top: 60px;
+  
+  color: #505050;
+  font-family: 'Roboto';
+  font-weight: bold;
+}
+
+.about-item {
+  margin-left: 30px;
+  margin-top: 0px;
+  font-size: 15px;
+  line-height: 1.7em;
+  letter-spacing: .2px;
+}
+
+#about-picture {
+  
+  margin-top: 15px;
+  width: 150px;
+  height: 150px;
+  border-radius: 10%;
 }
