--- a/src/App.css
+++ b/src/App.css
@@ -210,6 +210,9 @@ button:hover {
   font-family: Roboto;
 }
 
+.info {
+  margin-left: 50px;
+}
 .sketchful-container {
   display: flex;
   justify-content: center;
@@ -291,4 +294,34 @@ button:hover {
   width: 150px;
   height: 150px;
   border-radius: 10%;
+}
+
+.skillbox {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+}
+.skillbox h1 {
+  margin-right: 10px;
+}
+
+.skillsbutton {
+  
+  width: 130px;
+  margin: 5px;
+  padding: 5px;
+  
+  color: white;
+  background: #6795de;
+  /* border: solid 1px #6795de; */
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  font-size: 24px;
+  font-family: Quicksand;
+  text-align: center;
+}
+.front {
+  display: flex;
 }
