--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@ a:hover, a:active { text-decoration: none; }
 h1 {
   color: #585859;
 }
+
+/* .bigcontainer {
+  display: flex;
+  flex-direction: column;
+
+} */
+
+
 .k {
   height: 90px;
   width: 90px;
@@ -195,6 +203,7 @@ button:hover {
 .buttons {
   display: flex;
   justify-content: center;
+  /* width: 50vw; */
 }
 
 .idk {
@@ -238,6 +247,8 @@ button:hover {
   margin-bottom: 30px;
   font-size: 16px;
 }
+
+
 
 .sketchful-images {
   width: 40vw;
@@ -325,3 +336,137 @@ button:hover {
 .front {
   display: flex;
 }
+
+
+@media (max-width: 635px) {
+  .header {
+   flex-direction: column;
+   justify-content: center;
+   align-content: center;
+
+  }
+
+  .skills-container {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 30px;
+  }
+  .front {
+   flex-direction: column;
+  }
+  .spans {
+    display: flex;
+    font-size: 12px;
+    color: #a1a0a1;
+    cursor: pointer;
+    align-items: center;
+    
+  }
+  div > span {
+    margin: 10px;;
+  }
+  .k {
+    height: 50px;
+    width: auto;
+    margin: 0
+  }
+
+  .desc {
+    margin-top: 20px;
+    font-size: 24px;
+    line-height: 35px;
+    
+    
+  }
+
+  .skillsbutton {
+    width: 60px;
+  margin: 5px;
+  padding: 4px;
+  
+  color: white;
+  background: #6795de;
+  /* border: solid 1px #6795de; */
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  font-size: 12px;
+  font-family: Quicksand;
+  text-align: center;
+  }
+
+  .description {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   align-content: center;
+ 
+  }
+
+  .projectcontainer {
+    margin: 0;
+  }
+  .idk {
+    flex-direction: column;
+    
+  }
+  .laptop {
+    height: 100px;
+    width: auto;
+    align-content: center;
+  }
+  .skillbox h1 {
+   font-size: 16px;
+  }
+
+  .name {
+    margin-left: 0px;
+    text-align: center;
+    margin: 20px;
+  }
+button {
+  cursor: pointer;
+    width: 60px;
+    margin: 10px;
+    height: 24px;
+    color: white;
+    background: #222;
+    border: solid 1px black;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    font-size: 12px;
+    font-family: Oswald;
+}
+.idk2 {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  width: 50vw;
+}
+.project-description {
+  margin-top: 90px;
+}
+.info {
+  display: none;
+}
+
+.sketchful-images {
+  width: 65vw;
+  height: auto;
+  margin: 30px;
+  border: 1px black solid;
+  border-radius: 4px;
+  transition:transform 0.25s ease;
+}
+#about-view {
+  margin-left: 5px;
+}
+}
+
+/* @media (max-width: 500px) {
+  .desc {
+    font-size: 18px;
+  }
+} */
