--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ i:hover {
 }
 
 .experience {
-  margin-top: 60px;
+  /* margin-top: 60px; */
   width: 65vw;
   margin-left: 38px;
   /* border: 1px black solid; */
@@ -353,13 +353,15 @@ button:hover {
     align-items: center;
     flex-direction: column;
     margin: 30px;
+   
   }
+  
   .front {
    flex-direction: column;
   }
   .spans {
     display: flex;
-    font-size: 12px;
+    font-size: 16px;
     color: #a1a0a1;
     cursor: pointer;
     align-items: center;
@@ -383,7 +385,7 @@ button:hover {
   }
 
   .skillsbutton {
-    width: 60px;
+    width: 70px;
   margin: 5px;
   padding: 4px;
   
@@ -413,9 +415,10 @@ button:hover {
     
   }
   .laptop {
-    height: 100px;
-    width: auto;
+    height: auto;
+    width: 300px;
     align-content: center;
+    
   }
   .skillbox h1 {
    font-size: 16px;
@@ -427,29 +430,38 @@ button:hover {
     margin: 20px;
   }
 button {
-  cursor: pointer;
-    width: 60px;
+    cursor: pointer;
+    width: 100px;
     margin: 10px;
-    height: 24px;
+    height: 28px;
     color: white;
     background: #222;
     border: solid 1px black;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
-    font-size: 12px;
+    font-size: 14px;
     font-family: Oswald;
 }
 .idk2 {
   display: flex;
   flex-direction: column;
   align-content: center;
-  width: 50vw;
+  
 }
+
+
 .project-description {
   margin-top: 90px;
 }
 .info {
   display: none;
+  
+}
+
+.buttons {
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
 }
 
 .sketchful-images {
@@ -465,8 +477,8 @@ button {
 }
 }
 
-/* @media (max-width: 500px) {
-  .desc {
-    font-size: 18px;
+@media (max-width: 820px) {
+  .info {
+    display: none;
   }
-} */
+}
