--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -63,6 +63,7 @@
 @media (max-width: 800px) {
     #skills-container {
         background-image: none;
+        height: 85vh;
     }
     .blacky {
         width: 60vw;
