--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -25,7 +25,7 @@
     font-size: calc(2.2rem + (150 - 58) * (100vw - 20rem) / (1440 - 320));
     color: #eee;
     text-transform: uppercase;
-    margin-bottom: 84px;
+    margin-bottom: 50px;
     
 }
 
@@ -75,6 +75,19 @@
 
 }
 
+.mycontactnum2 {
+    font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    color: #8d8d8d;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    letter-spacing: 5px;
+    text-align: center;
+
+}
+
 .contact-button {
     font-family: Oswald, "Helvetica Neue", Helvetica, Arial, sans-serif;
     display: inline-block;
@@ -99,7 +112,7 @@
     margin-top: 20px;
   }
 
-  .contact-button:hover {
+  button:hover {
       color: #222
   }
 
@@ -112,11 +125,18 @@
 
       .contact-section {
           width: 90vw;
+         
+          
 }
 
       .mycontact {
         letter-spacing: 3px;
+        
       }
 
+      
+.mycontactnum2 {
+    letter-spacing: 0px;
+}
 
   }
