--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -1,5 +1,5 @@
 #landing-container {
-  background-color: rgb(0, 103, 246);
+  background-color: #66b5f9;
   height: 100vh;
   min-height: 600px;
   width: 100vw;
@@ -109,14 +109,28 @@
   color: white;
 }
 
+.animated-words span:nth-child(5) {
+  -webkit-animation-delay: 8s;
+  -ms-animation-delay: 8s;
+  animation-delay: 8s;
+  color: white;
+}
+
+.animated-words span:nth-child(6) {
+  -webkit-animation-delay: 10s;
+  -ms-animation-delay: 10s;
+  animation-delay: 10s;
+  color: white;
+}
+
 .animated-words span {
   position: absolute;
   left: 0px;
   opacity: 0;
   color: white;
-  -webkit-animation: animateWord 6s linear infinite 0s;
-  -ms-animation: animateWord 6s linear infinite 0s;
-  animation: animateWord 6s linear infinite 0s;
+  -webkit-animation: animateWord 10s linear infinite 0s;
+  -ms-animation: animateWord 10s linear infinite 0s;
+  animation: animateWord 10s linear infinite 0s;
 }
 
 @-webkit-keyframes animateWord {
@@ -161,6 +175,9 @@
 }
 
 @media (max-width: 620px) {
+  #landing-container {
+    background-size: 42vh;
+  }
   .animated-wordscontainer {
     flex-direction: column;
     height: 150px;
@@ -176,7 +193,7 @@
     margin: 30px 0px;
   }
   #landing-spacer {
-    width: 250px;
+    width: 200px;
     height: 100px;
     top: -15px;
     position: relative;
@@ -184,5 +201,8 @@
   .animated-words {
     position: relative;
     width: 200px;
+  }
+  .am1 {
+    width: 100%;
   }
 }
