--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -5,13 +5,13 @@
 
 #projects-container {
     background-color: white;
-    min-height: 1000px;
+    min-height: 920px;
     height: 60vh;
     width: 100vw;
-    background-image: url('./iphoneright.png');
-    background-position: right;
+    background-image: url('./media/4ksketchfulmac.png');
+    background-position: right -40% bottom 50%, right 10% bottom 5%;
     object-fit: cover;
-    background-size: 60vw;
+    background-size: 65vw;
     background-repeat: no-repeat;
 }
 
@@ -35,9 +35,51 @@
     width: 35vw;
     justify-content: center;
     align-content: center;
-    
+    margin-bottom: 20px
+}
 
-    
+.modal-main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.modal-left, .modal-right {
+    height: 100%;
+    width: 50%;
+}
+
+.modal-right {
+    background-color: red;
+}
+
+.modal-left {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-image-style {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+
+.modal-title-text {
+    font-family: 'Montserrat';
+    font-size: 50px;
+}
+
+.modal-title {
+    width: 100%;
+    height: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-image {
+    width: 100%;
+    height: 75%;
 }
 
 .project-section p {
@@ -49,7 +91,7 @@
 }
 
 .projects {
-    font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
+    font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
     font-weight: 700;
     font-size: calc(2.2rem + (150 - 58) * (100vw - 20rem) / (1440 - 320));
     color: #eee;
@@ -78,8 +120,9 @@
       color: rgb(0, 103, 246);
       box-shadow: 0px 0px, 1px 1px, 2px 2px, 3px 3px, 4px 4px, 5px 5px, 6px 6px, 7px 7px, 8px 8px, 9px 9px, 10px 10px, 11px 11px, 12px 12px;
       margin-bottom: 16px;
-      margin-top: 50px;
-      margin-right: 60px;
+      margin-top: 10px;
+      
+      /* margin-right: 60px; */
 }
 
 .project-button2 {
@@ -103,7 +146,7 @@
       box-shadow: 0px 0px, 1px 1px, 2px 2px, 3px 3px, 4px 4px, 5px 5px, 6px 6px, 7px 7px, 8px 8px, 9px 9px, 10px 10px, 11px 11px, 12px 12px;
       margin-bottom: 16px;
       margin-top: 50px;
-      margin-right: 60px;
+      margin-right: 30px;
 }
 
 @media(max-width: 653px) {
@@ -114,5 +157,6 @@
 
     #projects-container {
         background-image: none;
+        min-height: 1020px;
     }
 }
